--- a/EICODA/deployment.yaml
+++ b/EICODA/deployment.yaml
@@ -38,7 +38,7 @@ filters:
   - id: 577a26d2-216c-4e6e-95e0-e7808f8394
     name: "myRouterRouter"
     host: "productionComposeEU"
-    type: "Router"
+    type: "Custom"
     routingCriterias: "asdasd"
     mappings: 
       - "lowCostQueue:myPipe"
