--- a/EICODA/deployment.yaml
+++ b/EICODA/deployment.yaml
@@ -4,9 +4,17 @@ pipes:
       name: "myPipe"
       host: "myRabbitOnK8s"
       protocol: "amqp"
+    - id: 3b76043e-676b29-9008-b0215cec8e1d
+      name: "testOutputOne"
+      host: "myRabbitOnK8s"
+      protocol: "amqp"
+    - id: 3b76043e-676b-4029-9008-b02cec8e1d
+      name: "testOutputTwo"
+      host: "myRabbitOnK8s"
+      protocol: "amqp"
   topics:
     - id: 3b76043e-676b-4029-9008-b0cec8e1d
-      name: "myPipe"
+      name: "testTopic"
       host: "myRabbitOnK8s"
       protocol: "amqp"
 
@@ -24,6 +32,15 @@ filters:
     type: "amqpReceiver"
     mappings:
       - "inputPipe:myPipe"
+  - id: 577a26d2-216c-4e6e-95e0-e7808f8
+    name: "testRouter"
+    host: "myKubernetes"
+    type: "ConfigurableRouter"
+    routingCriterias: routing_logic.json
+    mappings:
+      - inputPipe:myPipe
+      - outputPipeOne:testOutputOne
+      - outputPipeTwo:testOutputTwo
       
 hosts:
   pipeHosts:
