--- a/EICODA/repositoryControllers/types.yaml
+++ b/EICODA/repositoryControllers/types.yaml
@@ -1,12 +1,15 @@
 filterTypes:
   - name: Router
     configs:
-      enforces: ["routingCriterias"]
-      optional:
-        interval: 10
+      - name: routingCriterias
+        file: true
+      - name: interval
+        default: 10
   - name: Transformator
     configs:
-      enforces: ["sourceFormat", "targetFormat", "transformationRules"]
+      - name: sourceFormat
+      - name: targetFormat
+      - name: transformationRules
   - name: ConfigurableRouter
     artifact: configurableRouterArtifact
     derivesFrom: Router
